--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+*{
+  background-color: rgb(204, 236, 236);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +15,68 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+@media(min-width:768px)
+{
+  .main_div{
+    position: relative;
+    top:50px;
+    left:450px;
+    width: 660px;
+    height: 620px;
+    /* border:5px solid red; */
+  }
+  .data_div{
+    display: flex;
+    position: absolute;
+    
+    width: 660px;
+    height: 620px;
+    /* border:5px solid blue; */
+    
+  }
+  .h1{
+    position:absolute;
+    top: 100px;
+    left:180px;
+    margin-bottom: 25px;
+    font-size: 40px;
+    color:blue
+  }
+  .input{
+    position:absolute;
+    left:180px;
+    top: 170px;
+  }
+  input{
+    height:50px;
+    width:300px;
+  }
+  ::placeholder{
+    font-size: 18px;
+    color:rgb(235, 173, 3)
+  }
+  .mydata{
+    position: absolute;
+    toP:250px;
+    width:100%;
+    height:360px;
+    /* border:5px solid black; */
+  }
+  .showdata{
+    position: relative;
+    display: flex;  
+    
+  }
+  .far{
+    display: flex;
+    left:100px;
+    top:30px;
+    position: absolute;
+  }
+}
+button{
+  background-color: yellow;
+  border-radius: 50px;
+  
 }
